force-app/main/default/objects/Expense_Claim__c/Expense_Claim__c.object-meta.xml
<CustomObject>
    <label>Expense Claim</label>
    <nameField>
        <label>Expense Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>