force-app/main/default/objects/Expense_Claim__c/fields/Accommodation_Total__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Total__c</fullName>
    <label>Total Accomodation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>