force-app/main/default/objects/Expense_Claim__c/fields/Approved_Special_claims_if_any__c.field-meta.xml
<CustomField>
    <fullName>Approved_Special_claims_if_any__c</fullName>
    <inlineHelpText>With prior approval from VP sales and HHs</inlineHelpText>
    <label>Approved Special claims, if any</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>