force-app/main/default/objects/Expense_Claim__c/fields/Cold_Room_Support__c.field-meta.xml
<CustomField>
    <fullName>Cold_Room_Support__c</fullName>
    <label>Cold Room Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>