force-app/main/default/objects/Expense_Claim__c/fields/Dealer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Discount__c</fullName>
    <inlineHelpText>Only on the basis of pre-approved list available with company, for any fresh Dealer discounts prior approval from VP Sales is a must</inlineHelpText>
    <label>Dealer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>