force-app/main/default/objects/Expense_Claim__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <formula>User__r.Employee_Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Designation</label>
    <type>Text</type>
</CustomField>