force-app/main/default/objects/Expense_Claim__c/fields/DMS_Claim_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DMS_Claim_Approval_Status__c</fullName>
    <label>DMS Claim Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>ASM/RSM Approved</fullName>
            </value>
            <value>
                <fullName>MIS team Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>