force-app/main/default/objects/Expense_Claim__c/fields/Expense_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Expense_Claim_Number__c</fullName>
    <displayFormat>EC-{00000}</displayFormat>
    <label>Expense Claim Number</label>
    <type>AutoNumber</type>
</CustomField>