force-app/main/default/objects/Expense_Claim__c/fields/Freezer_subsidy_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Freezer_subsidy_Repairs__c</fullName>
    <inlineHelpText>DF Repairs &amp;Transport) (Bills certified by the ASM to be attached</inlineHelpText>
    <label>Freezer subsidy/ Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>