force-app/main/default/objects/Expense_Claim__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Expense Claims</relationshipLabel>
    <relationshipName>Expense_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>