force-app/main/default/objects/Expense_Claim__c/fields/Outstation_Transport_Support__c.field-meta.xml
<CustomField>
    <fullName>Outstation_Transport_Support__c</fullName>
    <inlineHelpText>2% on sales beyond 40Km one way. Max up to 20% of the Distributor Purchase. HHs to mail route and km details as per attached format at beginning of every quarter to VP sales and finance, any deviations will be deducted basis approval availed</inlineHelpText>
    <label>Outstation Transport Support</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>