force-app/main/default/objects/Expense_Claim__c/fields/Party_Orders_institutional_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Party_Orders_institutional_Discounts__c</fullName>
    <label>Party Orders/ institutional Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>