force-app/main/default/objects/Expense_Claim__c/fields/Primary_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Primary_Purchase__c</fullName>
    <label>Primary Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>