force-app/main/default/objects/Expense_Claim__c/fields/Product_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Product_Complaint__c</fullName>
    <inlineHelpText>As per approval on case to case basis by HHs and VP Sales</inlineHelpText>
    <label>Product Complaint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>