force-app/main/default/objects/Expense_Claim__c/fields/Region_Area__c.field-meta.xml
<CustomField>
    <fullName>Region_Area__c</fullName>
    <formula>User__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region/Area</label>
    <type>Text</type>
</CustomField>