force-app/main/default/objects/Expense_Claim__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <formula>User__r.L1_Approver__r.FirstName + &apos; &apos; + User__r.L1_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager</label>
    <type>Text</type>
</CustomField>