force-app/main/default/objects/Expense_Claim__c/fields/Schemes__c.field-meta.xml
<CustomField>
    <fullName>Schemes__c</fullName>
    <label>Schemes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>