force-app/main/default/objects/Expense_Claim__c/fields/Secondary_Sales__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sales__c</fullName>
    <label>Secondary Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>