force-app/main/default/objects/Expense_Claim__c/fields/Stall_Rents_Event_Sales_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Stall_Rents_Event_Sales_Discounts__c</fullName>
    <inlineHelpText>As per approval by HHs and VP Sales</inlineHelpText>
    <label>Stall Rents / Event Sales Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>