force-app/main/default/objects/Expense_Claim__c/fields/Total_Claim_AMount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claim_AMount__c</fullName>
    <formula>Dealer_Discount__c +  Product_Complaint__c + Outstation_Transport_Support__c + Freezer_subsidy_Repairs__c + Schemes__c + Stall_Rents_Event_Sales_Discounts__c + Party_Orders_institutional_Discounts__c + Cold_Room_Support__c + Approved_Special_claims_if_any__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Claim Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>