force-app/main/default/objects/Expense_Claim__c/fields/Total_DA__c.field-meta.xml
<CustomField>
    <fullName>Total_DA__c</fullName>
    <label>Total DA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>