force-app/main/default/objects/Expense_Claim__c/fields/Total_DA_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_DA_Days__c</fullName>
    <label>Total DA Days</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>