force-app/main/default/objects/Expense_Claim__c/fields/Total_Expense_For_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_For_This_Month__c</fullName>
    <defaultValue>00</defaultValue>
    <label>Total Expense For This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>