force-app/main/default/objects/Expense_Claim__c/fields/Total_Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>Total_Miscellaneous__c</fullName>
    <label>Total Miscellaneous</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>