force-app/main/default/objects/Expense_Claim__c/fields/Travel_Expense_Total__c.field-meta.xml
<CustomField>
    <fullName>Travel_Expense_Total__c</fullName>
    <label>Travel Expense Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>