force-app/main/default/objects/Expense_Claim__c/recordTypes/DMS_Claims.recordType-meta.xml
<RecordType>
    <fullName>DMS_Claims</fullName>
    <active>true</active>
    <label>DMS Claims</label>
</RecordType>