force-app/main/default/objects/Expense_Claim__c/recordTypes/SFA_Expense_Claim.recordType-meta.xml
<RecordType>
    <fullName>SFA_Expense_Claim</fullName>
    <active>true</active>
    <label>SFA Expense Claim</label>
</RecordType>