force-app/main/default/objects/Expense_Claim__c/listViews/My_Claims.listView-meta.xml
<ListView>
    <fullName>My_Claims</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expense_Claim__c.SFA_Expense_Claim</value>
    </filters>
    <label>My Claims</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>